# SickozellMM

./: .gitignore  CMakeLists.txt  README.md  README_VCV.md  Sickozell.mmplugin  changelog.md  changelog_MM.md  plugin-mm.json  plugin.json
SickoCV/: README.md  changelog.md  plugin.json
SickoCV/src/: Clocker.cpp  DrumPlayer.cpp  DrumPlayerMini.cpp  DrumPlayerMk2.cpp  DrumPlayerPlus.cpp  DrumPlayerXtra.cpp  EnverL.cpp  Holder8L.cpp  HolderL.cpp  KeySampler.cpp  MultiRouterL.cpp  MultiRouterML.cpp  MultiSwitcherML.cpp  SickoAmpL.cpp  SickoLooper1.cpp  SickoLooper1Exp.cpp  SickoLooper3.cpp  SickoLooper5.cpp  SickoPlayer.cpp  SickoQuant.cpp  SickoQuant4.cpp  SickoQuant4L.cpp  SickoSampler.cpp  SickoSampler2.cpp  Slewer.cpp  SlewerL.cpp  SlewerMini.cpp  StepSeq.cpp  StepSeqPlus.cpp  Wavetabler.cpp  plugin.cpp  plugin.hpp
Sickozell/: CREDITS  README.md  plugin.json
Sickozell/src/: Adder8.cpp  Bgates.cpp  CVrouter.cpp  Clocker.cpp  Controls.hpp  DrumPlayerXtra.cpp  HolderCompactL.cpp  KeySampler.cpp  Modulator.cpp  Modulator7.cpp  Modulator7Compact.cpp  MultiSwitcherL.cpp  RandLoops.cpp  SickoCrosser4L.cpp  SickoCrosserL.cpp  SickoLooper1.cpp  SickoLooper1Exp.cpp  SickoLooper3.cpp  SickoPlayer.cpp  SickoQuantL.cpp  SickoSampler.cpp  SickoSampler2.cpp  SimpleSeq4.cpp  StepSeqPlus.cpp  Switcher8.cpp  TogglerMM.cpp  TrigSeqPlus.cpp  dr_wav.h  notes.hpp  plugin.cpp  plugin.hpp
metamodule/: CMakeLists.txt  README.md  changelog.md  plugin-mm.json
metamodule-plugin/: SickoCV.mmplugin  Sickozell.mmplugin
src/: AdMini.cpp  Adder8.cpp  CVmeter.cpp  CVswitcher.cpp  Clocker.cpp  Clocker2.cpp  Clocker2.cpp.old  Controls.hpp  DrumPlayer.cpp  DrumPlayerMini.cpp  DrumPlayerMk2.cpp  DrumPlayerPlus.cpp  DrumPlayerXtra.cpp  Drummer4Plus.cpp  Enver.cpp  EnverMini.cpp  EnverMiniExp.hpp  EnverMiniX.cpp  Holder.cpp  Holder8.cpp  HolderCompact.cpp  KeySampler.cpp  Modulator7.cpp  Modulator7Compact.cpp  MultiRouter.cpp  MultiSwitcher.cpp  PolyMuter16.cpp  PolyMuter16Plus.cpp  PolyMuter8.cpp  PolyMuter8Plus.cpp  RandLoops.cpp  RandLoops8.cpp  RandLoopsMini.cpp  RandMod7.cpp  RandMod7Compact.cpp  SampleDelay.cpp  SickoAmp.cpp  SickoCrosser.cpp  SickoCrosser4.cpp  SickoLooper1.cpp  (+30 more)
